--- a/circle.yml
+++ b/circle.yml
@@ -3,12 +3,21 @@ machine:
     version: oraclejdk8
 general:
   artifacts:
-    - "~/commercial-expiry-service/target/riffraff/artifacts.zip"
+    - "target/riffraff/artifacts.zip"
 dependencies:
+  cache_directories:
+    - "~/.sbt"
+    - "target/resolution-cache"
+    - "target/streams"
+    - "project/target/resolution-cache"
+    - "project/target/streams"
   override:
-    - sbt compile
+    - sbt test:compile
 test:
   override:
     - sbt test
-  post:
-    - sbt riffRaffUpload
+deployment:
+  riffraff_upload:
+    branch: /.*/
+    commands:
+      - sbt riffRaffUpload
